--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "lint": "tslint -p ."
   },
   "dependencies": {
+    "@types/gl": "^4.1.0",
+    "@types/gl-matrix": "^2.4.4",
     "axios": "^0.18.0",
+    "gl": "^4.1.1",
+    "gl-matrix": "^3.0.0",
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
     "sharp": "^0.20.3",
