--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.109",
     "@types/mkdirp": "^0.5.2",
-    "@types/node": "6",
+    "@types/node": "8",
     "@types/sharp": "^0.17.8",
     "ts-node": "^6.0.5",
     "tslint": "^5.10.0",
@@ -30,6 +30,7 @@
     "mkdirp": "^0.5.1",
     "rimraf": "^2.6.3",
     "sharp": "^0.20.3",
-    "sqlite": "^2.9.2"
+    "sqlite": "^2.9.2",
+    "wpe-webgl": "^0.0.5"
   }
 }
