--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "devDependencies": {
-    "@types/glob": "^7.1.3",
+    "@types/glob": "7.1.3",
     "@types/lodash": "4.14.165",
     "@types/minimist": "1.2.1",
     "@types/mkdirp": "1.0.1",
@@ -22,12 +22,12 @@
     "inspect": "ts-node . inspect"
   },
   "dependencies": {
-    "axios": "0.21.0",
-    "glob": "^7.1.6",
+    "axios": "0.21.1",
+    "glob": "7.1.6",
     "lodash": "4.17.20",
     "minimist": "1.2.5",
     "mkdirp": "1.0.4",
     "rimraf": "3.0.2",
-    "sharp": "0.26.3"
+    "sharp": "0.27.2"
   }
 }
