--- a/renderer/package.json
+++ b/renderer/package.json
@@ -9,6 +9,6 @@
     "sharp": "0.27.2"
   },
   "scripts": {
-    "postinstall": "curl https://raw.githubusercontent.com/EsotericSoftware/spine-runtimes/3.8/spine-ts/build/spine-webgl.js > spine-webgl.js; echo '\nmodule.exports.spine = spine; '>> spine-webgl.js"
+    "postinstall": "curl https://cdn.jsdelivr.net/npm/@esotericsoftware/spine-webgl@4.0.27/dist/iife/spine-webgl.js > spine-webgl.js; echo '\nmodule.exports.spine = spine; '>> spine-webgl.js"
   }
 }
