--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "glob": "7.1.6",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "lodash": "4.17.20",
     "minimist": "1.2.5",
     "mkdirp": "1.0.4",
     "rimraf": "3.0.2",
-    "sharp": "0.27.2"
+    "sharp": "0.27.2",
+    "ssl-root-cas": "^1.3.1"
   }
 }
