--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "start": "ts-node .",
     "update": "ts-node . update",
     "extract": "ts-node . extract",
-    "inspect": "ts-node . inspect"
+    "render": "ts-node . render",
+    "server": "node server.js",
+    
+    "prepare": "curl https://cdn.jsdelivr.net/npm/@esotericsoftware/spine-webgl@4.0.27/dist/iife/spine-webgl.js > src/spine-webgl.js; echo '\nmodule.exports.spine = spine; '>> src/spine-webgl.js"
   },
   "dependencies": {
     "axios": "0.21.1",
@@ -34,6 +37,7 @@
     "mkdirp": "1.0.4",
     "rimraf": "3.0.2",
     "sharp": "0.27.2",
-    "ssl-root-cas": "^1.3.1"
+    "ssl-root-cas": "^1.3.1",
+    "gl": "6.0.2"
   }
 }
