--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "extract": "ts-node . extract",
     "render": "ts-node . render",
     "server": "node server.js",
-    
     "prepare": "curl https://cdn.jsdelivr.net/npm/@esotericsoftware/spine-webgl@4.0.27/dist/iife/spine-webgl.js > src/spine-webgl.js; echo '\nmodule.exports.spine = spine; '>> src/spine-webgl.js"
   },
   "dependencies": {
     "axios": "0.21.1",
     "body-parser": "^1.20.1",
+    "cli-progress": "^3.11.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "gif-encoder": "^0.7.2",
+    "gl": "6.0.2",
     "glob": "7.1.6",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
@@ -37,7 +39,6 @@
     "mkdirp": "1.0.4",
     "rimraf": "3.0.2",
     "sharp": "0.27.2",
-    "ssl-root-cas": "^1.3.1",
-    "gl": "6.0.2"
+    "ssl-root-cas": "^1.3.1"
   }
 }
