--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "4.17.20",
     "minimist": "1.2.5",
     "mkdirp": "1.0.4",
+    "mysql": "^2.18.1",
     "rimraf": "3.0.2",
     "sharp": "0.27.2",
     "ssl-root-cas": "^1.3.1"
